--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,23 @@
+#Server
 spring.application.name=hexburger-pedido
+server.port=8080
+
+#JPA
+spring.jpa.show-sql=true
+spring.jpa.defer-datasource-initialization=true
+spring.jpa.hibernate.ddl-auto=update
+
+#PostgreSQL
+spring.datasource.url=jdbc:postgresql://localhost:5432/db_hexburger
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+
+#Swagger
+springdoc.api-docs.path=/api-docs
+
+#RabbitMQ
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
