--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 #Server
 spring.application.name=hexburger-pedido
-server.port=8080
+server.port=28082
 
 #JPA
 spring.jpa.show-sql=true
@@ -8,9 +8,9 @@ spring.jpa.defer-datasource-initialization=true
 spring.jpa.hibernate.ddl-auto=update
 
 #PostgreSQL
-spring.datasource.url=jdbc:postgresql://localhost:5432/db_hexburger
-spring.datasource.username=postgres
-spring.datasource.password=postgres
+spring.datasource.url=jdbc:postgresql://hexburger-db.ceq3vwc3if0f.us-east-1.rds.amazonaws.com:5432/postgres
+spring.datasource.username=hexadmin
+spring.datasource.password=WJN-)p%py1nswEWS
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
 #Swagger
@@ -21,3 +21,8 @@ spring.rabbitmq.host=localhost
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
+
+#Actuator
+management.endpoint.health.probes.enabled=true
+management.health.livenessState.enabled=true
+management.health.readinessState.enabled=true
