deploy do microsservico pedido

--- a/terraform/modules/helm/charts/values.yaml
+++ b/terraform/modules/helm/charts/values.yaml
@@ -58,7 +58,9 @@ ingress:
   hosts:
     - host: chart-example.local
       paths:
-        - path: /
+        - path: /v1/pedido
+          pathType: ImplementationSpecific
+        - path: /v1/produto
           pathType: ImplementationSpecific
   tls: []
   #  - secretName: chart-example-tls
