--- a/.github/quality/quality-gate/action.yml
+++ b/.github/quality/quality-gate/action.yml
@@ -15,6 +15,13 @@ runs:
   using: composite
   steps:
     - uses: actions/checkout@v3
+    - name: SonarQube Token
+      run: |
+        echo ${{ inputs.sonarqube_token }}
+
+        export SONAR_TOKEN=${{ inputs.sonarqube_token }}
+
+        env
     - uses: sonarsource/sonarcloud-github-action@master
       with:
         projectBaseDir: .
