--- a/.github/quality/quality-gate/action.yml
+++ b/.github/quality/quality-gate/action.yml
@@ -22,6 +22,7 @@ runs:
         export SONAR_TOKEN=${{ inputs.sonarqube_token }}
 
         env
+      shell: bash
     - uses: sonarsource/sonarcloud-github-action@master
       with:
         projectBaseDir: .
