--- a/.github/quality/quality-gate/action.yml
+++ b/.github/quality/quality-gate/action.yml
@@ -15,28 +15,22 @@ runs:
   using: composite
   steps:
     - uses: actions/checkout@v3
-    - name: SonarQube Token
-      run: |
-        echo ${{ inputs.sonarqube_token }}
-
-        export SONAR_TOKEN=${{ inputs.sonarqube_token }}
-
-        env
-      shell: bash
     - uses: sonarsource/sonarcloud-github-action@master
       with:
         projectBaseDir: .
         token: ${{ inputs.sonarqube_token }}
-    - name: Get Quality Gate status
-      run: |
-        curl -s -u "${{ inputs.sonarqube_token }}:" "${{ inputs.sonarqube_url }}/api/qualitygates/project_status?projectKey=${{ inputs.sonarqube_project_key }}" > sonarqube-quality-gate.json
-        jq -r '.projectStatus.status' sonarqube-quality-gate.json > sonarqube-quality-gate-status.txt
-      shell: bash
-    - name: Check Quality Gate status
-      run: |
-        status=$(<sonarqube-quality-gate-status.txt)
-        if [ "$status" != "OK" ]; then
-          echo "Quality Gate status is not OK: $status"
-          exit 1
-        fi
-      shell: bash
+      env:
+        SONAR_TOKEN:: ${{ inputs.sonarqube_token }}
+    # - name: Get Quality Gate status
+    #   run: |
+    #     curl -s -u "${{ inputs.sonarqube_token }}:" "${{ inputs.sonarqube_url }}/api/qualitygates/project_status?projectKey=${{ inputs.sonarqube_project_key }}" > sonarqube-quality-gate.json
+    #     jq -r '.projectStatus.status' sonarqube-quality-gate.json > sonarqube-quality-gate-status.txt
+    #   shell: bash
+    # - name: Check Quality Gate status
+    #   run: |
+    #     status=$(<sonarqube-quality-gate-status.txt)
+    #     if [ "$status" != "OK" ]; then
+    #       echo "Quality Gate status is not OK: $status"
+    #       exit 1
+    #     fi
+    #   shell: bash
