trocar variavel para workflow

--- a/.github/quality/quality-gate/action.yml
+++ b/.github/quality/quality-gate/action.yml
@@ -17,10 +17,8 @@ runs:
     - uses: actions/checkout@v3
     - uses: sonarsource/sonarcloud-github-action@master
       with:
-        projectBaseDir: .
-        token: ${{ inputs.sonarqube_token }}
-      env:
-        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+        fetch-depth: 0
+
     # - name: Get Quality Gate status
     #   run: |
     #     curl -s -u "${{ inputs.sonarqube_token }}:" "${{ inputs.sonarqube_url }}/api/qualitygates/project_status?projectKey=${{ inputs.sonarqube_project_key }}" > sonarqube-quality-gate.json
