--- a/.github/quality/quality-gate/action.yml
+++ b/.github/quality/quality-gate/action.yml
@@ -15,6 +15,11 @@ runs:
   using: composite
   steps:
     - uses: actions/checkout@v3
+    - name: Set up JDK 21
+      uses: actions/setup-java@v4
+      with:
+        java-version: "21"
+        distribution: "temurin"
     - uses: sonarsource/sonarcloud-github-action@master
       with:
         fetch-depth: 0
