--- a/.github/workflows/plan.yml
+++ b/.github/workflows/plan.yml
@@ -11,15 +11,10 @@ env:
   tfvars_file_name: deploy.hcl
   pr_number: ${{ github.event.number }}
   eks_cluster_name: hexburger-eks-cluster
+  AWS_ACCOUNT_ID: 212602060786
 
 jobs:
-  quality:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-
   unit_tests:
-    needs: quality
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -42,7 +37,7 @@ jobs:
           aws_secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws_session_token: ${{ secrets.AWS_SESSION_TOKEN }}
           aws_region: ${{ env.aws_region }}
-          aws_account_id: ${{ secrets.AWS_ACCOUNT_ID }}
+          aws_account_id: ${{ env.AWS_ACCOUNT_ID }}
 
   terraform_plan:
     needs: publish_ecr
