--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,10 +17,10 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 springdoc.api-docs.path=/api-docs
 
 #RabbitMQ
-spring.rabbitmq.host=localhost
+spring.rabbitmq.host=a7d97d417fcae4576b24a1bc7d9c69eb-2008258123.us-east-1.elb.amazonaws.com
 spring.rabbitmq.port=5672
-spring.rabbitmq.username=guest
-spring.rabbitmq.password=guest
+spring.rabbitmq.username=hexqueue
+spring.rabbitmq.password=1xo4r9VIU4ARLW3f
 
 #Actuator
 management.endpoint.health.probes.enabled=true
