alterar o ecr name

--- a/.github/workflows/plan.yml
+++ b/.github/workflows/plan.yml
@@ -12,7 +12,7 @@ env:
   pr_number: ${{ github.event.number }}
   eks_cluster_name: hexburger-eks-cluster
   ECR_REPOSITORY: hexburger-pedido
-  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
   SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
 
 jobs:
