Alterar o source do sonar

--- a/.github/workflows/plan.yml
+++ b/.github/workflows/plan.yml
@@ -16,16 +16,20 @@ env:
   SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
 
 jobs:
-  quality:
+  sonarcloud:
+    name: SonarCloud
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-
-      - name: SonarQube - Quality Gate
-        uses: ./.github/quality/quality-gate
+        with:
+          fetch-depth: 0  
+      - name: SonarCloud Scan
+        uses: SonarSource/sonarcloud-github-action@master
+        env: 
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
 
   unit_tests:
-    needs: quality
+    needs: sonarcloud
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
