--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -2,4 +2,7 @@ sonar.organizationKey=postech-soat-hexburguer
 sonar.organization=postech-soat-hexburguer
 sonar.projectKey=PostTech-SOAT_hexburger-pedido
 sonar.projectName=hexburger-pedido
-sonar.sources=src
+sonar.sources=src/main/java
+sonar.sourceEncoding=UTF-8
+sonar.language=java
+sonar.java.binaries=target/classes
