--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -3,3 +3,5 @@ sonar.organization=postech-soat-hexburguer
 sonar.projectKey=PostTech-SOAT_hexburger-pedido
 sonar.projectName=hexburger-pedido
 sonar.sources=src
+sonar.leak.period=90
+sonar.leak.period.type=days
