--- a/.github/workflows/apply.yml
+++ b/.github/workflows/apply.yml
@@ -12,11 +12,22 @@ env:
   terragrunt_version: 0.67.10
   tfvars_file_name: deploy.hcl
   eks_cluster_name: hexburger-eks-cluster
+  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
 
 
 jobs:
+  quality:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+
+      - name: SonarQube - Quality Gate
+        uses: ./.github/quality/quality-gate
+
   terraform_apply:
     runs-on: ubuntu-latest
+    needs: quality
     steps:
       - uses: actions/checkout@v3
 
